--- a/index.html
+++ b/index.html
@@ -73,28 +73,31 @@
       margin-top: 32px;
       justify-content: center;
     }
-    .link-btn {
-      display: inline-block;
-      padding: 10px 22px;
-      border-radius: 6px;
-      background: #f1f5f9;
-      color: #2563eb;
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 500;
-      border: 1.5px solid #e0e7ef;
-      transition: background 0.18s, color 0.18s, border 0.18s;
-      box-shadow: 0 1px 5px rgba(59,130,246,0.03);
+    .line-btn-col {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 120px;
     }
-    .link-btn:hover, .link-btn:focus {
-      background: #e0e7ef;
-      color: #1e40af;
-      border: 1.5px solid #3b82f6;
+    .line-btn img {
+      height: 36px;
+      border: 0;
+      display: block;
+    }
+    .btn-label {
+      margin-top: 6px;
+      font-size: 0.98rem;
+      color: #374151;
+      text-align: center;
+      letter-spacing: 0.5px;
+      line-height: 1.4;
     }
     @media (max-width: 400px) {
       .container { padding: 18px 6px 16px 6px; }
       .btn-group { gap: 7px; }
-      .link-btn { padding: 10px 10px; font-size: 0.98rem; }
+      .line-btn-col { width: 96px; }
+      .line-btn img { height: 32px; }
+      .btn-label { font-size: 0.94rem; }
     }
   </style>
 </head>
@@ -107,8 +110,18 @@
     </label>
     <div class="result" id="result"></div>
     <div class="btn-group">
-      <a href="https://lin.ee/Ax3tAul" class="link-btn" target="_blank" rel="noopener">橘子美食</a>
-      <a href="https://lin.ee/brbNvkD" class="link-btn" target="_blank" rel="noopener">柚子打車</a>
+      <div class="line-btn-col">
+        <a href="https://lin.ee/Ax3tAul" class="line-btn" target="_blank" rel="noopener" title="橘子美食">
+          <img src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png" alt="加入橘子美食好友">
+        </a>
+        <div class="btn-label">橘子美食折扣優惠</div>
+      </div>
+      <div class="line-btn-col">
+        <a href="https://lin.ee/brbNvkD" class="line-btn" target="_blank" rel="noopener" title="柚子打車">
+          <img src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png" alt="加入柚子打車好友">
+        </a>
+        <div class="btn-label">柚子打車折扣優惠</div>
+      </div>
     </div>
   </div>
   <script>
