--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>柚子打車優惠計算</title>
+  <!-- Google Fonts 可愛字體 -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600;700&family=Noto+Sans+TC:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
       background: #f4f6fb;
-      font-family: 'Segoe UI', 'Microsoft JhengHei', Arial, sans-serif;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       margin: 0;
       padding: 0;
     }
@@ -16,56 +18,64 @@
       margin: 60px auto;
       padding: 24px 18px 20px 18px;
       background: #fff;
-      border-radius: 12px;
+      border-radius: 18px;
       box-shadow: 0 2px 16px rgba(0,0,0,0.10);
     }
     h2 {
       text-align: center;
-      color: #3b82f6;
+      color: #ffb300;
       margin-bottom: 18px;
-      font-size: 1.4rem;
-      letter-spacing: 1px;
-      font-weight: 600;
+      font-size: 1.7rem;
+      letter-spacing: 2px;
+      font-weight: 700;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
+      text-shadow: 1px 2px 0 #fffbe7, 0 2px 8px #ffe08280;
     }
     label {
       display: block;
       margin-bottom: 12px;
-      font-weight: 500;
+      font-weight: 600;
       color: #22223b;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
+      letter-spacing: 1px;
     }
     input[type="number"] {
       width: 140px;
       padding: 7px 8px;
-      font-size: 1rem;
-      border: 1px solid #cbd5e1;
-      border-radius: 6px;
+      font-size: 1.05rem;
+      border: 1.8px solid #ffecb3;
+      border-radius: 8px;
       margin-left: 8px;
       margin-top: 6px;
       outline: none;
       transition: border 0.2s;
-      background: #f8fafc;
+      background: #fffde7;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
     }
     input[type="number"]:focus {
-      border: 1.5px solid #3b82f6;
-      background: #fff;
+      border: 2px solid #ffb300;
+      background: #fffde7;
     }
     .result {
       margin-top: 24px;
-      font-size: 1.1rem;
+      font-size: 1.13rem;
       line-height: 1.7;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
+      letter-spacing: 1px;
     }
     .helper {
-      color: #2563eb;
+      color: #ff9800;
       font-weight: bold;
     }
     .driver {
-      color: #059669;
+      color: #43a047;
       font-weight: bold;
     }
     .warn {
-      color: #dc2626;
+      color: #e65100;
       font-weight: bold;
       margin-top: 10px;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
     }
     .btn-group {
       display: flex;
@@ -83,14 +93,24 @@
       height: 36px;
       border: 0;
       display: block;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px #ffe08260;
+      transition: transform 0.13s;
+    }
+    .line-btn img:hover {
+      transform: scale(1.07) rotate(-2deg);
+      box-shadow: 0 4px 16px #ffd54f80;
     }
     .btn-label {
-      margin-top: 6px;
-      font-size: 0.98rem;
-      color: #374151;
+      margin-top: 7px;
+      font-size: 1.01rem;
+      color: #ff9800;
       text-align: center;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
       line-height: 1.4;
+      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
+      font-weight: 700;
+      text-shadow: 0 1px 0 #fffde7;
     }
     @media (max-width: 400px) {
       .container { padding: 18px 6px 16px 6px; }
