--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>柚子打車優惠計算</title>
-  <!-- Google Fonts 可愛字體 -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600;700&family=Noto+Sans+TC:wght@500;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -162,6 +161,12 @@
       return Number(value);
     }
 
+    // 無條件進位到5的倍數
+    function ceilTo5(n) {
+      if (n <= 0) return 0;
+      return Math.ceil(n / 5) * 5;
+    }
+
     function calcFare(fare) {
       fare = Number(fare);
       if (isNaN(fare) || fare < 0) return { text: '', warn: '請輸入正確的跳表金額' };
@@ -182,9 +187,9 @@
           text: `<span class="helper">給小幫手：${fare - 200 + 120} 元</span>`,
           warn: (fare - 200 + 120) <= 0 ? '※ 應付金額為 0 元，請確認輸入。' : ''
         };
-      // 司機金額最少為 0 元
+      // 司機金額最少為 0 元，並無條件進位到5
       return {
-        text: `<span class="helper">給小幫手：160 元</span><br><span class="driver">給司機：${Math.max(0, fare - 250)} 元</span>`,
+        text: `<span class="helper">給小幫手：160 元</span><br><span class="driver">給司機：${ceilTo5(Math.max(0, fare - 250))} 元</span>`,
         warn: (fare - 250) <= 0 ? '※ 司機應付金額為 0 元，請確認輸入。' : ''
       };
     }
