--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
     }
     .btn-group {
       display: flex;
-      gap: 14px;
-      margin-top: 34px;
       justify-content: center;
+      margin-top: 34px;
     }
     .line-btn-col {
       display: flex;
@@ -133,13 +132,7 @@
         <a href="https://lin.ee/Ax3tAul" class="line-btn" target="_blank" rel="noopener" title="橘子美食">
           <img src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png" alt="加入橘子美食好友">
         </a>
-        <div class="btn-label">橘子美食折扣優惠</div>
-      </div>
-      <div class="line-btn-col">
-        <a href="https://lin.ee/brbNvkD" class="line-btn" target="_blank" rel="noopener" title="柚子打車">
-          <img src="https://scdn.line-apps.com/n/line_add_friends/btn/zh-Hant.png" alt="加入柚子打車好友">
-        </a>
-        <div class="btn-label">柚子打車折扣優惠</div>
+        <div class="btn-label">這裡叫 Uber Eats 也很划算</div>
       </div>
     </div>
   </div>
@@ -147,7 +140,6 @@
     const fareInput = document.getElementById('fare');
     const resultDiv = document.getElementById('result');
 
-    // 處理範圍輸入，回傳平均值
     function parseFareInput(value) {
       value = value.replace(/\s+/g, '');
       const match = value.match(/^(\d+)\-(\d+)$/);
@@ -161,7 +153,6 @@
       return Number(value);
     }
 
-    // 無條件進位到5的倍數
     function ceilTo5(n) {
       if (n <= 0) return 0;
       return Math.ceil(n / 5) * 5;
@@ -187,7 +178,6 @@
           text: `<span class="helper">給小幫手：${fare - 200 + 120} 元</span>`,
           warn: (fare - 200 + 120) <= 0 ? '※ 應付金額為 0 元，請確認輸入。' : ''
         };
-      // 司機金額最少為 0 元，並無條件進位到5
       return {
         text: `<span class="helper">給小幫手：160 元</span><br><span class="driver">給司機：${ceilTo5(Math.max(0, fare - 250))} 元</span>`,
         warn: (fare - 250) <= 0 ? '※ 司機應付金額為 0 元，請確認輸入。' : ''
