--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       font-size: 1.7rem;
       letter-spacing: 2px;
       font-weight: 700;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       text-shadow: 1px 2px 0 #e0f7fa, 0 2px 8px #4dd0e180;
     }
     label {
@@ -35,7 +34,6 @@
       margin-bottom: 14px;
       font-weight: 600;
       color: #37474f;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       letter-spacing: 1px;
     }
     input[type="text"] {
@@ -49,7 +47,6 @@
       outline: none;
       transition: border 0.2s;
       background: #e0f7fa;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
     }
     input[type="text"]:focus {
       border: 2px solid #009688;
@@ -59,7 +56,6 @@
       margin-top: 26px;
       font-size: 1.13rem;
       line-height: 1.7;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       letter-spacing: 1px;
     }
     .helper {
@@ -74,7 +70,6 @@
       color: #d32f2f;
       font-weight: bold;
       margin-top: 10px;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
     }
     .btn-group {
       display: flex;
@@ -106,13 +101,12 @@
       text-align: center;
       letter-spacing: 1px;
       line-height: 1.4;
-      font-family: 'Baloo 2', 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif;
       font-weight: 700;
       text-shadow: 0 1px 0 #e0f7fa;
+      white-space: nowrap;
     }
     @media (max-width: 400px) {
       .container { padding: 18px 6px 16px 6px; }
-      .btn-group { gap: 7px; }
       .line-btn-col { width: 96px; }
       .line-btn img { height: 32px; }
       .btn-label { font-size: 0.94rem; }
